[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/StandardCalculator.gd" type="Script" id=1]
[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )

[node name="StandardCalculator" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script = ExtResource( 1 )

[node name="Keypad" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 80.0
margin_right = 330.0
margin_bottom = 490.0
mouse_filter = 0

[node name="0" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 10.0
margin_top = 330.0
margin_right = 160.0
margin_bottom = 401.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "0"
flat = false
mouse_filter = 0

[node name="1" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 10.0
margin_top = 250.0
margin_right = 81.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1"
flat = false
mouse_filter = 0

[node name="2" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 90.0
margin_top = 250.0
margin_right = 161.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2"
flat = false
mouse_filter = 0

[node name="3" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 170.0
margin_top = 250.0
margin_right = 241.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "3"
flat = false
mouse_filter = 0

[node name="4" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 10.0
margin_top = 170.0
margin_right = 81.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "4"
flat = false
mouse_filter = 0

[node name="5" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 90.0
margin_top = 170.0
margin_right = 161.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "5"
flat = false
mouse_filter = 0

[node name="6" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 170.0
margin_top = 170.0
margin_right = 241.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "6"
flat = false
mouse_filter = 0

[node name="7" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 10.0
margin_top = 90.0
margin_right = 81.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "7"
flat = false
mouse_filter = 0

[node name="8" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 90.0
margin_top = 90.0
margin_right = 161.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "8"
flat = false
mouse_filter = 0

[node name="9" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 170.0
margin_top = 90.0
margin_right = 241.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "9"
flat = false
mouse_filter = 0

[node name="period" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 170.0
margin_top = 330.0
margin_right = 241.0
margin_bottom = 401.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "."
flat = false
mouse_filter = 0

[node name="add" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 250.0
margin_top = 90.0
margin_right = 321.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false
mouse_filter = 0

[node name="subtract" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 250.0
margin_top = 10.0
margin_right = 321.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false
mouse_filter = 0

[node name="multiply" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 170.0
margin_top = 10.0
margin_right = 241.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "*"
flat = false
mouse_filter = 0

[node name="divide" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 90.0
margin_top = 10.0
margin_right = 161.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "/"
flat = false
mouse_filter = 0

[node name="solve" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 250.0
margin_top = 250.0
margin_right = 321.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "="
flat = false
mouse_filter = 0

[node name="clear" type="Button" parent="Keypad"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 10.0
margin_top = 10.0
margin_right = 81.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "C"
flat = false
mouse_filter = 0

[node name="Screen" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 330.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
placeholder_text = "0"
placeholder_alpha = 0.6
focus_mode = 2
caret_blink = false
caret_blink_speed = 0.65
mouse_filter = 0

[connection signal="pressed" from="Keypad/0" to="." method="_on_0_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/1" to="." method="_on_1_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/2" to="." method="_on_2_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/3" to="." method="_on_3_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/4" to="." method="_on_4_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/5" to="." method="_on_5_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/6" to="." method="_on_6_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/7" to="." method="_on_7_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/8" to="." method="_on_8_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/9" to="." method="_on_9_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/period" to="." method="_on_period_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/add" to="." method="_on_add_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/subtract" to="." method="_on_subtract_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/multiply" to="." method="_on_multiply_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/divide" to="." method="_on_divide_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/solve" to="." method="_on_solve_pressed" binds=[  ]]

[connection signal="pressed" from="Keypad/clear" to="." method="_on_clear_pressed" binds=[  ]]
